--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-- replicate==0.11.1
-+ replicate==0.50.0
-flask==3.0.0
-replicate==0.11.1
-requests==2.31.0
-moviepy==1.0.3
-numpy==1.24.3
+flask
+replicate
+requests
+moviepy
+python-lottie
+python-dotenv
